# Emblem

./: .hgignore  CMakeLists.txt  LICENSE  License.txt
Emblem/: CMakeLists.txt  Expression.h  Symbol.h
Emblem/Internal/: BinaryOperators.h  BinaryTree.h  ExpressionData.h  ExpressionTree.h  TermNode.h  Types.h  UnaryOperators.h
Emblem/Internal/Collection/: BinaryTree.h  IfcPack.h  Queue.h  Stack.h  TupleVector.h
Emblem/Internal/Collection/Iterator/: IteratorBinaryTree.h  IteratorInOrder.h  IteratorPostOrder.h  IteratorPreOrder.h
Emblem/Internal/Math/: ArithmeticExpressions.h  BinaryOperators.h  CMakeLists.txt  ExpressionBase.h  UnaryOperators.h
Include/: CMakeLists.txt
Include/Emblem/: Expression.h  Symbol.h
Include/Emblem/Internal/: BinaryOperators.h  BinaryTree.h  Derivative.h  TermNode.h  UnaryOperators.h
Test/: CMakeLists.txt  Main.cpp  UnitTest.cpp
doc/: CMakeLists.txt  Doxyfile.in  Doxyfile.in.new
